# GL

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp
glsl/: fragment.glsl  vertex.glsl
src/: main.cpp
src/include/: glUtils.hpp  utils.hpp
